force-app/main/default/objects/Zaraa__c/Zaraa__c.object-meta.xml
<CustomObject>
    <label>Zara</label>
    <nameField>
        <label>Zara</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zaras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>