force-app/main/default/objects/Zaraa__c/fields/client_number__c.field-meta.xml
<CustomField>
    <fullName>client_number__c</fullName>
    <label>client_number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>