force-app/main/default/objects/Zaraa__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>