force-app/main/default/objects/Zaraa__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <label>gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>