force-app/main/default/objects/Zaraa__c/fields/item__c.field-meta.xml
<CustomField>
    <fullName>item__c</fullName>
    <label>item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>