force-app/main/default/objects/Zaraa__c/fields/lifetime_value__c.field-meta.xml
<CustomField>
    <fullName>lifetime_value__c</fullName>
    <label>lifetime_value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>