force-app/main/default/objects/Zaraa__c/fields/primary_phone__c.field-meta.xml
<CustomField>
    <fullName>primary_phone__c</fullName>
    <label>primary_phone</label>
    <type>Phone</type>
</CustomField>