force-app/main/default/objects/Zaraa__c/fields/secondary_phone__c.field-meta.xml
<CustomField>
    <fullName>secondary_phone__c</fullName>
    <label>secondary_phone</label>
    <type>Phone</type>
</CustomField>