force-app/main/default/objects/Zaraa__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>client_number__c</columns>
    <columns>first_name__c</columns>
    <columns>last_name__c</columns>
    <columns>email__c</columns>
    <columns>gender__c</columns>
    <columns>primary_phone__c</columns>
    <columns>secondary_phone__c</columns>
    <columns>city__c</columns>
    <columns>state__c</columns>
    <columns>country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>